--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_TYPE=postgres
 PG_DB=postgres
-PG_HOST=host.docker.internal
+PG_HOST=localhost
 PG_PORT=5432
 PG_USER=postgres
 PG_PASSWORD=postgres
